<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Gray"
    tools:context=".Activities.OTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/otpimage" />

        <TextView
            android:id="@+id/phonelbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify_911234567890"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_code_to_verify_the_phone_number"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:itemBackground="@color/white"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColor="@color/Theme_color"
                app:OtpItemCount="6"
                app:OtpLineColor="@color/Theme_color"
                app:OtpViewType="line" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/continuebutton"
            android:padding="10dp"
            android:text="@string/verify"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>