<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F6F4F4"
    tools:context=".Activities.UserProfile_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:elevation="180dp"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/UserprofileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/User_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/phoneno_1234567890"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/chats_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:selectableItemBackground"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_chats"
                        app:tint="@color/teal_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/teal_700"
                        android:text="@string/chats"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/audio_call_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:selectableItemBackground"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_call"
                        app:tint="@color/teal_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/teal_700"
                        android:text="@string/Audio_call"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/video_call_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:selectableItemBackground"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_video"
                        app:tint="@color/teal_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/teal_700"
                        android:text="@string/video_call"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>